src/pages/CountryPage.css
#containerAll {
  padding: 128px 80px;
  width: 100%;
  max-width: 1500px;
  box-sizing: border-box;
}

#contents {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-around;
  margin-top: 80px;
}

#flagInfo {
  height: 230px;
  width: fit-content;
}

#info {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  padding-left: 80px;
}

.h2Info {
  font-size: var(--font-size-xlarge);
  margin: 0;
}

.pInfo {
  font-size: var(--font-size-small);
  word-wrap: break-word;
  line-height: 32px;
  column-count: 2;
  column-gap: 115px;
  margin: 30px 0;
}

#borders {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
}

#borderGrid {
  display: grid;
  grid-template-columns: repeat(3, 100px);
  column-gap: 10px;
  row-gap: 11px;
  grid-auto-rows: auto;
  padding-left: 15px;
}

.border {
  margin: 0;
  padding: 8px 50px;
  border-radius: 5px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.pBorders {
  font-size: var(--font-size-xsmall);
}

.boldBorders {
  font-size: var(--font-size-small);
  padding-top: 5px;
  margin: 0;
}

@media screen and (max-width: 1440px) {
  #flagInfo {
    height: 200px;
  }

  .h2Info {
    font-size: 28px;
  }

  .pInfo {
    font-size: var(--font-size-xsmall);
    column-gap: 60px;
  }

  .pBorders {
    font-size: 12px;
  }

  .boldBorders {
    font-size: var(--font-size-xsmall);
  }
}

@media screen and (max-width: 1080px) {
  #contents {
    flex-direction: column;
    margin-top: 50px;
  }

  #info {
    align-items: flex-start;
    padding-left: 0;
  }

  .h2Info {
    align-self: center;
    padding-top: 40px;
  }

  #borders {
    flex-direction: row;
  }

  #borderGrid {
    padding-left: 15px;
  }

  #borderGrid {
    grid-template-columns: repeat(3, 40px);
    column-gap: 70px;
    padding-left: 15px;
    padding-top: 0;
  }
}

@media screen and (max-width: 630px) {
  #flagInfo {
    height: 180px;
  }

  #info {
    align-self: flex-start;
  }

  .h2Info {
    align-self: flex-start;
  }

  .pInfo {
    column-count: 1;
  }

  #borders {
    flex-direction: column;
  }

  #borderGrid {
    padding-left: 0;
    padding-top: 15px;
  }
}

@media screen and (max-width: 480px) {
  #containerAll {
    padding-left: 28px;
    padding-right: 28px;
  }

  .h2Info {
    font-size: 22px;
    padding-top: 30px;
  }

  .pInfo {
    margin-top: 20px;
  }
}

